# Olio2026

./: .gitignore  LICENSE  README.md
Arvauspeli/: README.md
Arvauspeli/src/: main.cpp
VK2/ESITEHTÄVÄ/untitled/: main.cpp
VK3/: main.cpp
VK4/: CMakeLists.txt  main.cpp
VK5/: CMakeLists.txt  Notifikaattori.cpp  Notifikaattori.h  Seuraaja.cpp  Seuraaja.h  main.cpp
VK6/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
VK7-Laskin/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
VK7/VK7-Konsoli/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
VK8/VK8/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
